# asteroids-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
asteroids/: CMakeLists.txt
asteroids/app/: main.cpp
asteroids/asterlib/asteroids/: asteroid.cpp  asteroid.hpp
asteroids/asterlib/game/: configs.hpp  game.cpp  game.hpp
asteroids/asterlib/ship/: lasers.cpp  lasers.hpp  ship.cpp  ship.hpp
